Collection Widget done.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="material_green_700">#00C853</color>
 
     <color name="white">#FFF</color>
+
+    <color name="widget_background">#99FFFFFF</color>
 </resources>
